--- a/framework/source/resource/qx/mobile/scss/basic/_picker.scss
+++ b/framework/source/resource/qx/mobile/scss/basic/_picker.scss
@@ -3,7 +3,7 @@
 // 
 
 .picker {
-  @extend .dialog;
+  @extend .popup;
 
   -ms-touch-action: none;
 }
