--- a/framework/source/resource/qx/mobile/scss/color/_ios.scss
+++ b/framework/source/resource/qx/mobile/scss/color/_ios.scss
@@ -469,7 +469,7 @@ input[type="checkbox"]:checked + label {
   color: #fff;
 }
 
-.dialogTitleUnderline:after {
+.popup-title:after {
   display: none;
 }
 
